--- a/src/components/atoms/example/utilities.scss
+++ b/src/components/atoms/example/utilities.scss
@@ -1,4 +1,5 @@
 @use "./variables" as*;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Noto+Serif+JP&family=Roboto&display=swap');
 
 *{
   font-family: $fontfamily-gothic;
