フォントの定義を変更しました

--- a/src/components/atoms/example/_variables.scss
+++ b/src/components/atoms/example/_variables.scss
@@ -28,5 +28,5 @@ $grid-breakpoints: (
     xxl: 1400px,
 );
 
-$fontfamily-mincho: "Roboto","Noto Serif JP","Note Sans JP";
-$fontfamily-gothic: "Roboto","Noto Serif JP","Noto Sans JP";
+$fontfamily-mincho: "serif","Roboto","Noto Serif JP","Note Sans JP";
+$fontfamily-gothic: "sans-serif","Roboto","Noto Serif JP","Noto Sans JP";
