--- a/src/components/atoms/_variables.scss
+++ b/src/components/atoms/_variables.scss
@@ -9,7 +9,7 @@ $orange_zorba: #a19283;
 $orange_bistre: #442606;
 $black: #000000;
 $gray_nobel: #999999;
-$brack_50: raba(0,0,0,0.5);
+$brack_50: rgba(0,0,0,0.5);
 
 
 $fontsize-xs: 12px;
@@ -19,14 +19,12 @@ $fontsize-l: 20px;
 $fontsize-xl: 36px;
 $fotsize-xxl: 40px;
 
-$grid-breakpoints: (
-    xs: 0,
-    sm: 576px,
-    md: 768px,
-    lg: 992px,
-    xl: 1200px,
-    xxl: 1400px,
-);
+$container-sm: 576px;
+$container-md: 768px;
+$container-lg: 992px;
+$container-xl: 1200px;
+$container-xxl: 1400px;
 
-$fontfamily-mincho: "Roboto","Noto Serif JP","Note Sans JP";
+
+$fontfamily-mincho: "Noto Serif JP","Roboto","Note Sans JP";
 $fontfamily-gothic: "Roboto","Noto Serif JP","Noto Sans JP";
