fontのスペルを直しました

--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -17,7 +17,7 @@ $fontsize-s: 14px;
 $fontsize-m: 16px;
 $fontsize-l: 20px;
 $fontsize-xl: 36px;
-$fotsize-xxl: 40px;
+$fontsize-xxl: 40px;
 
 $container-sm: 576px;
 $container-md: 768px;
