button.scssを書き加えました

--- a/src/components/atoms/button/buttton.scss
+++ b/src/components/atoms/button/buttton.scss
@@ -2,6 +2,11 @@
 
 .assignment-button{
     color:$white;
+    font-family:$fontfamily-mincho;
+    font-size:$fontsize-s;
+    font-weight: 400;
     background-color: $black;
-
+    position: absolute;
+    width: 180px;
+    height: 45px;
 }
