表示の位置のコードを変えました　レスポンシブ対応を追加

--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -9,7 +9,7 @@ $orange_zorba: #a19283;
 $orange_bistre: #442606;
 $black: #000000;
 $gray_nobel: #999999;
-$brack_50: rgba(0,0,0,0.5);
+$black_50: rgba(0,0,0,0.5);
 
 
 $fontsize-xs: 12px;
