--- a/src/components/atoms/button/button.scss
+++ b/src/components/atoms/button/button.scss
@@ -1,12 +1,11 @@
 @use "../../variables" as *;
+@media screen and (max-width: $container-md){
 
 .assignment-button {
   color: $white;
-  font-family: $fontfamily-mincho;
   font-size: $fontsize-s;
   font-weight: 400;
   background-color: $black;
-  position: absolute;
   width: 180px;
   height: 45px;
   display: flex;
@@ -17,4 +16,5 @@
 }
 .assignment-button:hover{
   background-color: $orange_bistre;
+}
 }
