--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -11,13 +11,12 @@ $black: #000000;
 $gray_nobel: #999999;
 $black_50: rgba(0,0,0,0.5);
 
-
 $fontsize-xs: 12px;
 $fontsize-s: 14px;
 $fontsize-m: 16px;
 $fontsize-l: 20px;
 $fontsize-xl: 36px;
-$fotsize-xxl: 40px;
+$fontsize-xxl: 40px;
 
 $container-sm: 576px;
 $container-md: 768px;
@@ -25,5 +24,5 @@ $container-lg: 992px;
 $container-xl: 1200px;
 $container-xxl: 1400px;
 
-$fontfamily-mincho: "Noto Serif JP","Roboto","Note Sans JP";
-$fontfamily-gothic: "Roboto","Noto Serif JP","Noto Sans JP";
+$fontfamily-mincho: "Noto Serif JP","Roboto";
+$fontfamily-gothic: "Note Sans JP","Roboto";
