--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -26,5 +26,5 @@ $container-xl: 1200px;
 $container-xxl: 1400px;
 
 
-$fontfamily-mincho: "Noto Serif JP","Roboto","Note Sans JP";
-$fontfamily-gothic: "Roboto","Noto Serif JP","Noto Sans JP";
+$fontfamily-mincho: "Noto Serif JP";
+$fontfamily-gothic: "Noto Sans JP","Roboto";
