--- a/src/components/atoms/button/button.scss
+++ b/src/components/atoms/button/button.scss
@@ -1,5 +1,5 @@
 @use "../../variables" as *;
-@media screen and (max-width: $container-md){
+@media screen and (min-width: $container-md){
 
 .assignment-button {
   color: $white;
@@ -13,8 +13,11 @@
   align-items: center;
   padding: 0px 16px;
   transition: 0.2s;
-}
-.assignment-button:hover{
-  background-color: $orange_bistre;
+  
+   &:hover {
+     background-color: $orange_bistre;
+     text-decoration: none;
+     color: white;
+  }
 }
 }
