--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -24,5 +24,5 @@ $container-lg: 992px;
 $container-xl: 1200px;
 $container-xxl: 1400px;
 
-$fontfamily-mincho: "Noto Serif JP";
+$fontfamily-mincho: "Noto Serif JP","Roboto";
 $fontfamily-gothic: "Note Sans JP","Roboto";
