--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -1,6 +1,3 @@
-$color-example: #ff0000;
-$fontsize-example: 16px;
-
 $white: #ffffff;
 $white_smoke: #f5f5f5;
 $gray_desertStorm: #ece9e6;
@@ -24,5 +21,5 @@ $container-lg: 992px;
 $container-xl: 1200px;
 $container-xxl: 1400px;
 
-$fontfamily-mincho: "Noto Serif JP","Roboto";
-$fontfamily-gothic: "Note Sans JP","Roboto";
+$fontfamily-mincho: "Noto Serif JP",serif;
+$fontfamily-gothic: "Noto Sans JP","Roboto",sans-serif;
