fontの変更　paddingの変更

--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -26,5 +26,5 @@ $container-xl: 1200px;
 $container-xxl: 1400px;
 
 
-$fontfamily-mincho: "Noto Serif JP";
-$fontfamily-gothic: "Noto Sans JP","Roboto";
+$fontfamily-mincho: "Noto Serif JP",serif;
+$fontfamily-gothic: "Noto Sans JP","Roboto",sans-serif;
