--- a/src/components/atoms/button/button.scss
+++ b/src/components/atoms/button/button.scss
@@ -1,5 +1,5 @@
 @use "../../variables" as *;
-@media screen and (min-width: $container-md){
+@media screen and (min-width: $container-sm){
 
 .assignment-button {
   color: $white;
@@ -8,10 +8,7 @@
   background-color: $black;
   width: 180px;
   height: 45px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0px 16px;
+  padding: 12.5px 64px 12.5px 64px;
   transition: 0.2s;
   
    &:hover {
@@ -19,5 +16,5 @@
      text-decoration: none;
      color: white;
   }
-}
+ }
 }
