--- a/src/components/atoms/button/button.scss
+++ b/src/components/atoms/button/button.scss
@@ -6,15 +6,47 @@
   font-size: $fontsize-s;
   font-weight: 400;
   background-color: $black;
-  width: 180px;
-  height: 45px;
-  padding: 12.5px 64px 12.5px 64px;
+  padding: 12.5px 64px;
   transition: 0.2s;
   
    &:hover {
      background-color: $orange_bistre;
      text-decoration: none;
-     color: white;
+     color: $white;
   }
  }
 }
+
+@media screen and (min-width: $container-md) {
+.assignment-button{
+  color: $white;
+  font-size: $fontsize-s;
+  font-weight: 400;
+  background-color: $black;
+  padding: 17.5px 49px;
+  transition: 0.2s;
+  
+   &:hover {
+     background-color: $orange_bistre;
+     text-decoration: none;
+     color: $white;
+  }
+ }
+}
+
+@media screen and (min-width: $container-lg) {
+  .assignment-button{
+    color: $white;
+    font-size: $fontsize-s;
+    font-weight: 400;
+    background-color: $black;
+    padding: 17.5px 74px 17.5px 74px;
+    transition: 0.2s;
+    
+     &:hover {
+       background-color: $orange_bistre;
+       text-decoration: none;
+       color: $white;
+    }
+   }
+  }
